--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "rustywind-fix": "rustywind --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
-    "react-modal": "^3.14.4",
     "react-query": "^3.33.7",
     "react-router-dom": "^6.2.1"
   },
@@ -23,7 +23,6 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^1.0.7",
     "json-server": "^0.17.0",
     "prettier": "^2.5.0",
